# GASE

./: .editorconfig  .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GASE_IMPLEMENTATION_PLAN.md  LICENSE  README.md  SECURITY.md  create_sample_docs.py  pyproject.toml  test_phase1_2.py  test_phase1_2_units.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: run_eval_25.py  run_financebench_eval.py  run_quick_eval.py
benchmarks/datasets/: sample_25_queries.json
src/gase/: __init__.py  config.py  logging.py  models.py
src/gase/eval/: __init__.py
src/gase/indexing/: __init__.py  bm25_indexer.py  graph_indexer.py  indexer.py  qdrant_indexer.py
src/gase/parser/: __init__.py  docling_parser.py
src/gase/retrieval/: __init__.py  bm25_retriever.py  fusion.py  graph_traversal.py  orchestrator.py  provenance.py  vector_retriever.py
tests/integration/: test_retrieval_e2e.py
tests/unit/: test_fusion.py  test_retrieval_orchestrator.py
